--- a/棋盘覆盖/棋盘覆盖/棋盘覆盖.vcxproj
+++ b/棋盘覆盖/棋盘覆盖/棋盘覆盖.vcxproj
@@ -142,7 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="棋盘可视化.cpp">
+    <ClCompile Include="randomcolor.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="puzzle.cpp">
