--- a/棋盘覆盖/棋盘覆盖/棋盘覆盖.vcxproj.filters
+++ b/棋盘覆盖/棋盘覆盖/棋盘覆盖.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="puzzle.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="棋盘可视化.cpp">
+    <ClCompile Include="randomcolor.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="SFML.cpp">
